# src/model/roommate_request_unregistered_dorm_picture.go
@@ -1,0 +1,7 @@
+package model
+
+type RoommateRequestUnregisteredDormPicture struct {
+	ID                                           uint   `gorm:"primaryKey" json:"-"`
+	RoommateRequestWithUnregisteredDormStudentID string `json:"-"`
+	PictureUrl                                   string `gorm:"type:text" json:"picture_url"`
+}
