# src/model/roommate_request_with_no_room.go
@@ -1,8 +1,8 @@
 package model
 
 type RoommateRequestWithNoRoom struct {
-	StudentID string     `gorm:"primaryKey"`
-	Student   Student    `json:"student"`
+	StudentID string     `gorm:"primaryKey" json:"student_id"`
+	Student   Student    `json:"-"`
 	Budget    int        `json:"budget"`
-	Zones     []DormZone `gorm:"many2many:roommate_request_no_room_zone;type:citext" json:"zones"`
+	Zones     []DormZone `gorm:"many2many:roommate_request_no_room_zone;" json:"zones"`
 }
